Bug 562525 - nsPropertiesParser::FinishValueState potentially uses a variable uninitialized dependent on a member of a class in a file with threadsafe classes, r=bsmedberg