xpcom/ds/nsPersistentProperties.cpp
@@ -128,14 +128,15 @@ public:
 
     // This is really ugly hack but it should be fast
     PRUnichar backup_char;
-    if (mMinLength)
+    PRUint32 minLength = mMinLength;
+    if (minLength)
     {
-      backup_char = mValue[mMinLength-1];
-      mValue.SetCharAt('x', mMinLength-1);
+      backup_char = mValue[minLength-1];
+      mValue.SetCharAt('x', minLength-1);
     }
     mValue.Trim(trimThese, PR_FALSE, PR_TRUE);
-    if (mMinLength)
-      mValue.SetCharAt(backup_char, mMinLength-1);
+    if (minLength)
+      mValue.SetCharAt(backup_char, minLength-1);
 
     mProps->SetStringProperty(NS_ConvertUTF16toUTF8(mKey), mValue, aOldValue);
     mSpecialState = eParserSpecial_None;
